test/should_pass/rep_bug_model_001.gm
model rep_bug_model_001;

node class N1 {
	a: int;
}

edge class E1 {
	a: float;
}
