test/should_fail/enum_model_002.gm
// empty enum declarations are not allowed

model enum_model_002;

enum te { }

node class A {
	a : int;
}

